[package]
name = "justjp2"
version = "0.1.1"
edition = "2021"
authors = ["Ki Hyun Park <justkihyun1998@gmail.com>"]
description = "Pure Rust JPEG 2000 (JP2/J2K) encoder and decoder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justjp2"
homepage = "https://github.com/kihyun1998/justjp2"
documentation = "https://docs.rs/justjp2"
rust-version = "1.80"
readme = "README.md"
keywords = ["jpeg2000", "jp2", "j2k", "image", "codec"]
categories = ["multimedia::images", "encoding"]
exclude = ["vendor/", "tests/fixtures/"]

[dependencies]
bitflags = "2"
rayon = "1"
